@@ -15,7 +15,9 @@ all: index.html
     :print Use 'aap publish' to publish the latest index.html, INSTALL, ChangeLog and screenshots.
 
 publish: $Files
-	:publishall
+	# The publish method doesn't work with sourceforge's scp scheme.
+	:sys scp index.html ../../INSTALL ../../ChangeLog $SF_URL:htdocs/
+	:sys scp images/*.jpg $SF_URL:htdocs/images
 
 index.html: $TOPLEVELDIR/NEWS $TOPLEVELDIR/AUTHORS vimcdoc-sf.py
         :sys touch index.html
